--- a/templates/first/hello.html.twig
+++ b/templates/first/hello.html.twig
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
-</head>
-<body>
-    <p>Aujourd'hui on est le : {{ "now" | date("d/m/Y") }}</p>
-    <h1>Hello {{ prenom | capitalize }} {{ nom | upper }}</h1>
-</body>
-</html>
+
+    <h2>Hello {{ prenom | title }} {{ nom | upper }}</h2>
+    {# <img src="{{ asset('assets/images/') ~ path | defaultImage}}" alt=""> #}
