--- a/templates/first/index.html.twig
+++ b/templates/first/index.html.twig
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ firstname }} {{ name }}</title>
-</head>
-<body>
-    <div>
-        <h1>With love from {{ firstname }} {{ name }}</h1>
-        <p>Bonjour Techwall sf6</p>
-    </div>
-</body>
-</html>
+{% extends "template.html.twig" %}
+
+{% block title %}
+    {{ firstname }} {{ name }}    
+{% endblock %}
+
+{% block body %}    
+    <h1>With love from {{ firstname }} {{ name }}</h1>
+    <p>Bonjour Techwall Sf6</p>
+    Mon url absolu est : {{ url("first") }}
+{% endblock %}
