--- a/templates/first/hello.html.twig
+++ b/templates/first/hello.html.twig
@@ -8,5 +8,6 @@
 <body>
     <p>Aujourd'hui, on est le {{ "now" | date("d/m/Y") }}</p>
     <h1>Hello {{ nom | title }} {{ prenom | title }}</h1>
+    <img src="{{ asset('assets/images/') ~ path | defaultImage }}" alt="">
 </body>
 </html>
