--- a/templates/first/hello.html.twig
+++ b/templates/first/hello.html.twig
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
-</head>
-<body>
-    <p>Aujourd'hui, on est le {{ "now" | date("d/m/Y") }}</p>
-    <h1>Hello {{ nom | title }} {{ prenom | title }}</h1>
-    <img src="{{ asset('assets/images/') ~ path | defaultImage }}" alt="">
-</body>
-</html>
+
+    <h2>Hello {{ prenom | title }} {{ nom | title }}</h2>
+    {# <img src="{{ asset('assets/images/') ~ path | defaultImage }}" alt=""> #}
