--- a/templates/todo/index.html.twig
+++ b/templates/todo/index.html.twig
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{asset('node_modules/bootstrap/dist/css/bootstrap.css')}}">
-    <title>ToDoController</title>
-</head>
-<body>
-{% for message in app.session.flashBag.get('info') %}
-    <div class="alert alert-info">
-        {{ message }}
-    </div>
-{% endfor %}
+{% extends 'template.html.twig' %}
 
-{% for message in app.session.flashBag.get('success') %}
-    <div class="alert alert-success">
-        {{ message }}
-    </div>
-{% endfor %}
-
-{% for message in app.session.flashBag.get('error') %}
-    <div class="alert alert-danger">
-        {{ message }}
-    </div>
-{% endfor %}
-
-    <h1>Liste des todos : </h1>
+{% block body %}        
+    {% block pageTitle %}
+        Liste des todos : 
+    {% endblock %}
     
     <ol class="list-group">
         {% for name, content in app.session.get('todos') %}
@@ -34,5 +12,8 @@
             </li>
         {% endfor %}
     </ol>
-</body>
-</html>
+{% endblock %}
+
+{% block title %}
+    Todo
+{% endblock %}
