--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -35,10 +35,9 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Settings</a></li>
-                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_login') }}">Login</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_register') }}">Register</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -91,7 +90,11 @@
                     </div>
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
-                        Start Bootstrap
+                        {% if app.user %}
+                            {{ app.user.email }}
+                        {% else %}
+                            Anonymous
+                        {% endif %}
                     </div>
                 </nav>
             </div>
