--- a/templates/personne/index.html.twig
+++ b/templates/personne/index.html.twig
@@ -10,8 +10,10 @@
                 <p class="card-text">Âge : {{ personne.age }} ans.</p>
                 <a href="{{ path('personne.detail', {id: personne.id}) }}" class="card-link"><i class="fas fa-info-circle"></i></a>
                 {# <a href="{{ path('personne.delete', {id: personne.id}) }}" class="card-link"><i class="fas fa-user-items"></i></a> #}
-                <a href="{{ path('personne.delete', {id: personne.id}) }}" class="card-link"><i class="fa-solid fa-user-xmark"></i></a>
-                <a href="{{ path('personne.edit', {id: personne.id}) }}" class="card-link"><i class="fas fa-user-edit"></i></a>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a href="{{ path('personne.delete', {id: personne.id}) }}" class="card-link"><i class="fa-solid fa-user-xmark"></i></a>
+                    <a href="{{ path('personne.edit', {id: personne.id}) }}" class="card-link"><i class="fas fa-user-edit"></i></a>
+                {% endif %}
             </div>
         </div>        
     {% endfor %}
